<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">
    <string name="app_name" translatable="true">Ayllu</string>
    <string name="login">Login</string>
    <string name="identificacion">Identificación</string>
    <string name="contrasena">Contraseña</string>
    <string name="mostrarContrasena">Mostrar contraseña</string>
    <string name="login_user_process_authenticate">Iniciando Sesión</string>
    <string name="login_user_process_message">Por favor espere…</string>
    <string name="item_navbar_monitor_recoder">REGISTRAR MONITOR</string>
    <string name="item_navbar_monitor_list">MONITORES</string>
    <string name="item_menu_monitoring">Monitorear</string>
    <string name="item_menu_exit">Salir</string>
    <string name="registration_form_id">Identificación</string>
    <string name="registration_form_name">Nombre</string>
    <string name="registration_form_surname">Apellido</string>
    <string name="registration_form_email">Correo</string>
    <string name="registration_form_job">Trabajo</string>
    <string name="registration_form_password">Contraseña</string>
    <string name="registration_form_confpassword">Confirmar contraseña</string>
    <string name="registration_form_button_record">Registrar</string>
    <string name="registration_form_alert_invalid_field">Campo inválido</string>
    <string name="registration_form_alert_empty_field">Campo vacío</string>
    <string name="registration_form_alert_password">Debe contener máyusculas, minúsulas, dígitos y un tamaño mayor a 8 caracteres</string>
    <string name="registration_form_alert_different_passwords">Las contraseñas no coinciden</string>
    <string name="registration_form_process_shipping_status">Registrando monitor</string>
    <string name="registration_form_process_message">Por favor espere …</string>
    <string name="registration_form_process_successful_message">Registro adicionado</string>
    <string name="registration_form_process_error_message">Se produjo un error</string>
    <string name="registration_form_process_message_server">No se pudo conectar al servidor</string>
    <string name="list_admin_monitors_title_enabled">Monitores Habilitados</string>
    <string name="list_admin_monitors_title_disabled">Monitores Deshabilitados</string>
    <string name="list_admin_item_enabled">Habilitados</string>
    <string name="list_admin_item_disabled">Deshabilitados</string>
    <string name="list_admin_item_options">Opciones</string>
    <string name="list_admin_dialog_title">OPCIONES</string>
    <string name="list_admin_dialog_option_edit">EDITAR MONITOR</string>
    <string name="list_admin_dialog_option_disabled">DESHABILITAR MONITOR</string>
    <string name="list_admin_dialog_option_enabled">HABILITAR MONITOR</string>
    <string name="list_admin_message_title">MONITOR EDITADO</string>
    <string name="list_admin_message_edit">El monitor ya se ha intentado editar, si se edito recargue el listado para actualizar la información, de lo contrario elija continuar.</string>
    <string name="list_admin_disabled_text">¿Esta seguro que quiere deshabilitar a </string>
    <string name="list_admin_disabled_title">DESHABILITAR MONITOR</string>
    <string name="list_admin_disabled">Monitor deshabilitado</string>
    <string name="list_admin_enabled_text">¿Esta seguro que quiere habilitar a </string>
    <string name="list_admin_enabled_title">HABILITAR MONITOR</string>
    <string name="list_admin_enabled">Monitor habilitado</string>
    <string name="list_admin_dialog_option_continue">CONTINUAR</string>
    <string name="list_admin_dialog_option_cancel">CANCELAR</string>
    <string name="menu_admin_title">Opciones del administrador</string>
    <string name="menu_admin_option_title_monitoring">MENÚ MONITOR</string>
    <string name="menu_admin_option_description_monitoring">Ingresa a todas las funcionalidades del monitor</string>
    <string name="menu_admin_option_title_session">CERRAR SESIÓN</string>
    <string name="form_admin_title_register">Registrar monitor</string>
    <string name="form_admin_title_edit">Editar monitor</string>
    <string name="item_menu_edit_monitor">Editar monitor</string>
    <string name="item_menu_disable_monitor">Deshabilitar monitor</string>
    <string name="item_cardview_user_name">Nombre</string>
    <string name="item_cardview_user_surname">Apellido</string>
    <string name="item_cardview_user_id">Identificación</string>
    <string name="process_message_question">¿Está seguro de deshabilitar al monitor?</string>
    <string name="process_message_title_alert">Advertencia</string>
    <string name="process_message_disable_monitor">Deshabilitando al monitor</string>
    <string name="process_message">Por favor espere …</string>
    <string name="process_successful_message">Monitor deshabilitado</string>
    <string name="process_error_message">No se encontraron datos</string>
    <string name="process_message_server">No se pudo conectar al servidor</string>
    <string name="title_activity_edit_monitor">Editar monitor</string>
    <string name="edit_form_id">Identificación</string>
    <string name="edit_form_name">Nombre</string>
    <string name="edit_form_surname">Apellido</string>
    <string name="edit_form_password">Contraseña</string>
    <string name="edit_form_confpassword">Confirmar contraseña</string>
    <string name="edit_form_alert_invalid_field">Campo inválido</string>
    <string name="redit_form_alert_empty_field">Campo vacío</string>
    <string name="edit_form_alert_password">Debe contener máyusculas, minúsculas, dígitos y un tamaño mayor a 8 caracteres</string>
    <string name="edit_form_alert_different_passwords">Las contraseñas no coinciden</string>
    <string name="edit_form_process_message_update_monitor">Actualizando monitor</string>
    <string name="edit_form_process_message">Por favor espere …</string>
    <string name="edit_form_process_successful_message">Monitor actualizado</string>
    <string name="edit_form_process_error_message">Se produjo un error</string>
    <string name="edit_form_process_message_server">No se pudo conectar al servidor</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">ELEGIR</string>
    <string name="start">INICIO</string>
    <string name="monitoring_menu_message_exit">¿Quieres Salir?</string>
    <string name="monitoring_menu_message_upload">Hay datos registrados sin conexión a internet, ¿Desea subirlos ahora?</string>
    <string name="slide_1_title">REGISTRA O MONITOREA UNA AFECTACIÓN</string>
    <string name="slide_1_desc">Recorre, registra o monitorea el estado de Conservación del QHAPAQ ÑAN</string>
    <string name="titleListMonitoring">Listado de afectaciones</string>
    <string name="descriptionInfoListMonitoring">Por el momento, no hay afectaciones</string>
    <string name="descriptionInfoListMonitoringNegative">No hay afectaciones para la zona actual</string>
    <string name="descriptionTramo">TRAMO</string>
    <string name="descriptionSubtramo">SUBTRAMO</string>
    <string name="descriptionSeccion">SECCIÓN</string>
    <string name="descriptionPropiedad">PROPIEDAD NOMINADA</string>
    <string name="itemCardViewFecha">FECHA:</string>
    <string name="itemCardViewLatitud">LATITUD:</string>
    <string name="itemCardViewLongitud">LONGITUD:</string>
    <string name="itemCardViewVariable">VARIABLE:</string>
    <string name="itemCardViewFactor">FACTOR:</string>
    <string name="itemCardViewDescriptionPrueba">Imagen del monitoreo</string>
    <string name="titleListMonitoringDialog">INFORMACIÓN</string>
    <string name="titleListMonitoringDialogError">ERROR</string>
    <string name="descriptionListMonitoringDialog">Seleciona una propiedad nominada para registrar la afectación</string>
    <string name="opcionListMonitoringDialog">HECHO</string>
    <string name="opcion_list_monitoring_dialog_acept">ACEPTAR</string>
    <string name="opcion_list_monitoring_dialog_cancel">CANCELAR</string>
    <string name="opcion_list_monitoring_dialog_ok">OK</string>
    <string name="list_monitoring_process_message_search">Buscando afectaciones</string>
    <string name="list_monitoring_process_message">Por favor espere …</string>
    <string name="list_monitoring_process_message_server">No se pudo conectar al servidor</string>
    <string name="list_monitoring_title_dialog_offline">Monitoreo sin conexión a internet</string>
    <string name="list_monitoring_description_dialog_offline">Hay un paquete de datos disponible</string>
    <string name="list_monitoring_description_dialog_offline_question">¿Desea utilizarlos?</string>
    <string name="list_monitoring_card_view_item_property">P. NOMINADA</string>
    <string name="list_monitoring_card_view_item_variable">VARIABLE</string>
    <string name="list_monitoring_card_view_item_date">FECHA</string>
    <string name="list_monitoring_card_view_item_latitude">LATITUD</string>
    <string name="list_monitoring_card_view_item_length">LONGITUD</string>
    <string name="titleDetailMonitoring">Monitoreo</string>
    <string name="itemCardViewPropiedad">PROPIEDAD NOMINADA:</string>
    <string name="itemCardViewCoordenadas">COORDENADAS:</string>
    <string name="itemCardViewMonitor">MONITOR:</string>
    <string name="itemCardViewRepercusiones">REPERCUSIONES:</string>
    <string name="itemCardViewOrigen">ORIGEN:</string>
    <string name="itemCardViewPorcentaje">PORCENTAJE DE APARICIÓN:</string>
    <string name="itemCardViewFrecuencia">FRECUENCIA DE APARICIÓN:</string>
    <string name="titleDetailMonitoringDialog">INFORMACIÓN</string>
    <string name="descriptionDetailMonitoringDialog">No puedes monitorear la afectación dos veces en el mismo día</string>
    <string name="monitoring_detail_dialog_option_positive">HECHO</string>
    <string name="monitoring_detail_rep_positive">Positiva</string>
    <string name="monitoring_detail_rep_negative">Negativa</string>
    <string name="monitoring_detail_rep_current">Actual</string>
    <string name="monitoring_detail_rep_potential">Potencial</string>
    <string name="monitoring_detail_org_internal">Interno</string>
    <string name="monitoring_detail_org_external">Externo</string>
    <string name="titleFormRegistrationMonitoring">Formulario de registro</string>
    <string name="titleFormMonitoring">Formulario de monitoreo</string>
    <string name="titleFormRepercusiones">REPERCUSIONES:</string>
    <string name="titleFormOrigen">ORIGEN:</string>
    <string name="titleFormPorcentaje">PORCENTAJE DE APARICIÓN:</string>
    <string name="titleFormFrecuencia">FRECUENCIA DE APARICIÓN:</string>
    <string name="descriptionButtonFactor">FACTOR</string>
    <string name="descriptionButtonVariable">VARIABLE</string>
    <string name="summary_item_title_factor">FACTOR:</string>
    <string name="summary_item_title_variable">VARIABLE:</string>
    <string name="successfulRecordTitle">REGISTRO EXITOSO</string>
    <string name="successfulRecordImageDescription">OK</string>
    <string name="successfulRecordMonitoringDescription">Los datos se han registrado sin ningún inconveniente</string>
    <string name="graph_percentage_frequency_subtitle_vertical">P\nu\nn\nt\na\nj\ne</string>
    <string name="graph_institutional_response_title">Análisis respuesta institucional</string>
    <string name="graph_institutional_response_subtitle_horizontal">Fecha de la Evaluación</string>
    <string name="graph_institutional_response_settings">Opciones</string>
    <string name="graph_institutional_response_evaluation">Evaluación</string>
    <string name="graph_institutional_response_personal">Personal</string>
    <string name="graph_institutional_response_time">Tiempo</string>
    <string name="graph_institutional_response_budget">Presupuesto</string>
    <string name="graph_institutional_response_means">Recursos</string>
    <string name="graph_institutional_response_knowledge">Conocimiento</string>
</resources>