<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_margin="@dimen/layout_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_admin_user_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:src="@drawable/ic_login"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_identificacion"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_identificacion"
                android:ems="10"
                android:hint="@string/registration_form_id"
                android:theme="@style/EditTextBlack"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:theme="@style/EditTextBlack"
                android:drawableStart="@drawable/ic_user"
                android:ems="10"
                android:hint="@string/registration_form_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_user"
                android:theme="@style/EditTextBlack"
                android:ems="10"
                android:hint="@string/registration_form_surname"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/registration_form_email"
                android:theme="@style/EditTextBlack"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_work"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_work"
                android:ems="10"
                android:hint="@string/registration_form_job"
                android:theme="@style/EditTextBlack"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_lock"
                android:ems="10"
                android:hint="@string/registration_form_password"
                android:theme="@style/EditTextBlack"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_conf_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_conf_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_lock"
                android:ems="10"
                android:hint="@string/registration_form_confpassword"
                android:theme="@style/EditTextBlack"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>